<resources>
    <string name="mc_update_notification_bar_title">Update is available</string>
    <string name="mc_update_notification_title">New version</string>
    <string name="mc_update_notification_msg">Click to update</string>
    <string name="mc_notification_status_online">Online</string>
    <string name="mc_notification_status_offline">Offline</string>
    <string name="mc_commons_notification_gpsDisabled">GPS is disabled</string>
    <string name="mc_commons_notification_gpsOpenSettings">Select to open Location settings</string>
    <string name="mc_commons_string_noData">No data</string>
    <string name="login.user.hint">Login</string>
    <string name="login.password.hint">Password</string>
    <string name="mx_map_key">0pX8apUQaWq4ZxWBMiFCBWa7SiqpqtN_RwBKkxw</string>
    <string name="mx_app_name">Maxunits</string>
    <string name="mx_activity_login_login">Login</string>
    <string name="mx_activity_login_account">Account</string>
    <string name="mx_activity_login_username">Username</string>
    <string name="mx_activity_login_password">Password</string>
    <string name="mx_activity_login_gpsDisabled">Your GPS is disabled! Would you like to enable it?</string>
    <string name="mx_activity_login_gpsEnable">Enable GPS</string>
    <string name="mx_activity_login_cancel">Cancel</string>
    <string name="mx_activity_login_settings">Settings</string>
    <string name="sync_in_progress">Syncing application settings</string>
    <string name="mx_activity_abort_abort">Abort</string>
    <string name="mx_activity_abort_cancel">Cancel</string>
    <string name="mx_activity_mapPosition_title">Route</string>
    <string name="mx_activity_mapPosition_destination">Destination</string>
    <string name="mx_activity_unavailability_ok">OK</string>
    <string name="mx_activity_unavailability_cancel">Cancel</string>
    <string name="mx_activity_unavailability_reason">Reason</string>
    <string name="mx_activity_unavailability_set">Set</string>
    <string name="mx_activity_unavailability_nextAvailableAddress">Next available address</string>
    <string name="mx_activity_unavailability_nextAvailablePostcode">Next available postcode</string>
    <string name="mx_activity_unavailability_startDate">Start date and time</string>
    <string name="mx_activity_unavailability_endDate">End date and time</string>
    <string name="mx_activity_unavailability_notValid">Not all required fields is filled</string>
    <string name="mx_activity_unavailability_reasonRequired">Reason is required</string>
    <string name="mx_activity_unavailability_startDateRequired">Start date is required</string>
    <string name="mx_activity_unavailability_endDateRequired">End date is required</string>
    <string name="mx_activity_unavailability_incorrectDateFormat">Incorrect format of date (%s)</string>
    <string name="mx_activity_preferences_enabled">Enabled</string>
    <string name="mx_activity_preferences_tracking">Tracking</string>
    <string name="mx_activity_preferences_tracking_summary">Sending GPS coordinates</string>
    <string name="mx_activity_preferences_batchCover">Batch cover (sec)</string>
    <string name="mx_activity_preferences_retrieveInterval">Retrieve interval (sec)</string>
    <string name="mx_activity_preferences_communicationServer">Communication server</string>
    <string name="mx_activity_preferences_host">Host</string>
    <string name="mx_activity_preferences_port">Port</string>
    <string name="mx_activity_preferences_componentName">Component name</string>
    <string name="mx_activity_preferences_update">Automatic updates</string>
    <string name="mx_activity_preferences_update_serverPort">Port</string>
    <string name="mx_activity_preferences_offlineMode">Offline Mode</string>
    <string name="mx_activity_preferences_barcode_scanner">Moto barcode scanner</string>
    <string name="settings_theme_night">Night theme</string>
    <string name="settings_theme_day">Day theme</string>
    <string name="menu_switch_theme">Switch theme</string>
    <string name="mx_activity_datetime_reset">Reset</string>
    <string name="mx_notification_gpsDisabled">GPS is disabled</string>
    <string name="mx_notification_gpsOpenSettings">Select to open Location settings</string>
    <string name="mx_noData">No data</string>
    <string name="mx_play_a_sound_alert_for_incoming_changes">Play a sound alerts</string>
    <string name="mx_other">Other</string>
    <string name="mx_audio_alerts">Audio alerts</string>
    <string name="mx_activity_preferences_settings_lock">Settings lock</string>
    <string name="mx_msg_error_with_start_gps">Supported navigation software is not found.</string>
    <string name="mx_msg_error_no_current_gps_location">Can not connect to GPS service. Please, try late.</string>
    <string name="mx_msg_verify_location_question">This customer\'s accurate location is not stored in Maxoptra database. Would you like to update this location to your current GPS position?</string>
    <string name="mx_min">min</string>
    <string name="mx_time_short_days">d</string>
    <string name="mx_time_short_hours">h</string>
    <string name="mx_time_short_minutes">m</string>
    <string name="mx_loading">Loading…</string>
    <string name="mx_routes_loading">Loading routes…</string>
    <string name="mx_map_go_to_current_location">Go to current location</string>
    <string name="mx_map_tracking_options">Tracking options</string>
    <string name="mx_map_track_current_position">Track current position</string>
    <string name="mx_empty" translatable="false" />
    <string name="mx_divider" translatable="false">:</string>
    <string name="mx_yes">Yes</string>
    <string name="mx_no">No</string>
    <string name="mx_ok">OK</string>
    <string name="mx_cancel">Cancel</string>
    <string name="mx_enter_password">Enter password</string>
    <string name="mx_settings_locked">Settings locked</string>
    <string name="mx_locked">Locked</string>
    <string name="mx_unlocked">Unlocked</string>
    <string name="mx_incorrect_password">Incorrect password</string>
    <string name="mx_language">Language</string>
    <string name="mx_country_and_town">Country and town</string>
    <string name="mx_fast_login">Fast login</string>
    <string name="states_run_unassigned">Unassigned</string>
    <string name="states_run_assigned">Assigned</string>
    <string name="states_run_sent">Sent</string>
    <string name="states_run_received">Received</string>
    <string name="states_run_accepted">Accepted</string>
    <string name="states_run_rejected">Rejected</string>
    <string name="states_run_started">Started</string>
    <string name="states_run_in_progress">In progress</string>
    <string name="states_run_finished">Finished</string>
    <string name="states_run_completed">Completed</string>
    <string name="states_run_cancelled">Cancelled</string>
    <string name="states_run_aborted">Aborted</string>
    <string name="states_run_late15">Late 15</string>
    <string name="states_run_late30">Late 30</string>
    <string name="states_run_late60">Late 60</string>
    <string name="states_run_location_reached">Location reached</string>
    <string name="states_stop_not_started">Idle</string>
    <string name="states_stop_accepted">Accepted</string>
    <string name="states_stop_started">Started</string>
    <string name="states_stop_on_route">On route</string>
    <string name="states_stop_arrived">Arrived</string>
    <string name="states_stop_arrive5">Arrive 5</string>
    <string name="states_stop_arrive10">Arrive 10</string>
    <string name="states_stop_drop5">Drop 5</string>
    <string name="states_stop_drop10">Drop 10</string>
    <string name="states_stop_late15">Late 15</string>
    <string name="states_stop_late30">Late 30</string>
    <string name="states_stop_late60">Late 60</string>
    <string name="states_stop_late_a_lot">Late a lot</string>
    <string name="states_stop_finished">Finished</string>
    <string name="states_stop_completed">Completed</string>
    <string name="states_stop_fail">Fail</string>
    <string name="states_stop_aborted">Aborted</string>
    <string name="states_stop_suspended">Suspended</string>
    <string name="mx_activity_login_exit">Exit</string>
    <string name="mx_tomtom_route">Route was updated</string>
    <string name="msg_schedule_updated_title">Schedule Updated</string>
    <string name="msg_schedule_updated_message">Your schedule has been updated</string>
    <string name="mx_api_server_connection_error_title">Connection failed</string>
    <string name="mx_api_server_connection_error_message">Connection failed, reconnect?</string>
    <string name="new_information">New information has arrived</string>
    <string name="stop">Stop</string>
    <string name="job">Job</string>
    <string name="job_activity_title">Jobs</string>
    <string name="status">Status</string>
    <string name="job_card_status">Status:</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="pod">POD</string>
    <string name="start">Start</string>
    <string name="abort">Abort</string>
    <string name="resume">Resume</string>
    <string name="aborted">Aborted</string>
    <string name="arrive">Arrive</string>
    <string name="give_over">Done</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="abort_code">Choose a code</string>
    <string name="comment">Comment</string>
    <string name="name">Name</string>
    <string name="reference_label">Reference number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="address_label">Address</string>
    <string name="contact_label">Contact name</string>
    <string name="customer_label">Customer</string>
    <string name="phone_label">Contact phone</string>
    <string name="notes_label">Notes:</string>
    <string name="cost_label">Cost:</string>
    <string name="order_type_label">Vehicle requirement:</string>
    <string name="no_data">No data</string>
    <string name="barcode_label">Barcodes</string>
    <string name="complete">Complete</string>
    <string name="fail_run">Fail run</string>
    <string name="run_failed">Run failed</string>
    <string name="clear">Clear</string>
    <string name="run">Run</string>
    <string name="runs">Runs</string>
    <string name="cancel">Cancel</string>
    <string name="market_not_installed">Android Market is not installed; cannot install Barcode Scanner</string>
    <string name="total_jobs">Total jobs:</string>
    <string name="loading">Loading</string>
    <string name="unloading">Unloading</string>
    <string name="arrive_to_pickup">Arrive to pickup</string>
    <string name="pickup_duration">Pickup duration</string>
    <string name="pickup_location">Start location</string>
    <string name="drop_location">End location</string>
    <string name="route">Route</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_done">Done:</string>
    <string name="statistics_fail">Fail:</string>
    <string name="statistics_suspended">Suspended:</string>
    <string name="total_load">Total load/volume</string>
    <string name="total_time">Total time</string>
    <string name="driving_time">Driving time</string>
    <string name="depart_from_pickup">Depart from pickup</string>
    <string name="mins">mins</string>
    <string name="kg">kg</string>
    <string name="info">Details</string>
    <string name="arrival_time">Arrival time</string>
    <string name="drop_duration">Drop duration</string>
    <string name="departure_time">Departure time</string>
    <string name="load">Load</string>
    <string name="volume">Volume</string>
    <string name="window">Time window</string>
    <string name="refresh_jobs">Refresh jobs</string>
    <string name="late">late!</string>
    <string name="stop_type_pu">PU</string>
    <string name="abort_short">Abort</string>
</resources>