<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/mx_activity_preferences_communicationServer">

        <EditTextPreference
            android:inputType="textUri"
            android:key="app.host"
            android:title="@string/mx_activity_preferences_host" />

        <EditTextPreference
            android:inputType="number"
            android:key="app.port"
            android:title="@string/mx_activity_preferences_port" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mx_activity_preferences_tracking">

        <CheckBoxPreference
            android:key="tracking.enabled"
            android:summary="@string/mx_activity_preferences_tracking_summary"
            android:title="@string/mx_activity_preferences_enabled" />

        <EditTextPreference
            android:dependency="tracking.enabled"
            android:inputType="number"
            android:key="save.location.interval"
            android:title="@string/mx_activity_preferences_batchCover" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mx_other">

        <CheckBoxPreference
            android:key="update.alert"
            android:summary="@string/mx_play_a_sound_alert_for_incoming_changes"
            android:title="@string/mx_audio_alerts" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="settings.password"
            android:singleLine="true"
            android:title="@string/mx_activity_preferences_settings_lock" />

        <ListPreference
            android:defaultValue="en"
            android:entryValues="@array/mx_locale_list"
            android:key="user.locale"
            android:title="@string/mx_language" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:key="app.theme"
            android:title="@string/menu_switch_theme" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="moto.barcode"
            android:title="@string/mx_activity_preferences_barcode_scanner" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mx_activity_preferences_offlineMode">

        <CheckBoxPreference
            android:key="offline.version"
            android:title="@string/mx_activity_preferences_enabled" />

        <ListPreference
            android:defaultValue="Samara, RU"
            android:dependency="offline.version"
            android:entries="@array/mx_demo_country_and_town_list"
            android:entryValues="@array/mx_demo_country_and_town_list"
            android:key="offline.demo.country"
            android:title="@string/mx_country_and_town" />
    </PreferenceCategory>
</PreferenceScreen>