<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/mxAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:hint="@string/mx_activity_login_account"
        android:imeOptions="flagNoExtractUi"
        android:singleLine="true" />

    <EditText
        android:id="@+id/mxUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:hint="@string/mx_activity_login_username"
        android:imeOptions="flagNoExtractUi"
        android:singleLine="true" />

    <EditText
        android:id="@+id/mxPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:hint="@string/mx_activity_login_password"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:singleLine="true" />

</LinearLayout>