<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:stretchColumns="1">

        <TableRow android:id="@+id/loading_row">

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />

            <TextView
                android:id="@+id/loading"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />

        <TableRow>

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_location" />

            <TextView
                android:id="@+id/pickup_location"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />

        <TableRow>

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_location" />

            <TextView
                android:id="@+id/drop_location"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />

        <TableRow android:id="@+id/unloading_row">

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unloading" />

            <TextView
                android:id="@+id/unloading"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />

        <TableRow>

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_load" />

            <TextView
                android:id="@+id/total_load"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="12 kg / 10 m3" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />

        <TableRow>

            <TextView
                style="@style/McDetailsScreenAttribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route" />

            <TextView
                android:id="@+id/route"
                style="@style/McDetailsScreenValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="10 km / 1d 10h 45m" />
        </TableRow>

        <View
            android:layout_height="1dp"
            android:background="@drawable/mc_img_divider" />
    </TableLayout>

    <LinearLayout
        android:id="@+id/job_info_button_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details">

        <Button
            android:id="@+id/accept_button"
            style="@style/mxButtonActionLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

        <Button
            android:id="@+id/reject_button"
            style="@style/mxButtonActionRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reject" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/job_info_button_panel"
        android:orientation="vertical">

        <ListView
            android:id="@+id/stop_list"
            style="@style/mcListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/mc_common_bg" />
    </LinearLayout>
</RelativeLayout>